tests/ui/feature-gates/feature-gate-negate-unsigned.stderr
error[E0277]: cannot apply unary operator `-` to type `usize`
  --> $DIR/feature-gate-negate-unsigned.rs:10:23
   |
LL |     let _max: usize = -1;
   |                       ^^ cannot apply unary operator `-`
   |
   = help: the trait `Neg` is not implemented for `usize`
   = help: the following other types implement trait `Neg`:
             &f128
             &f16
             &f32
             &f64
             &i128
             &i16
             &i32
             &i64
           and 12 others
   = note: unsigned values cannot be negated
help: you may have meant to the wrapped-around value of type `usize`
   |
LL -     let _max: usize = -1;
LL +     let _max: usize = usize::MAX;
   |

error[E0600]: cannot apply unary operator `-` to type `u8`
  --> $DIR/feature-gate-negate-unsigned.rs:14:14
   |
LL |     let _y = -x;
   |              ^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0600.
For more information about an error, try `rustc --explain E0277`.
